---
title: Milli Sporcu Yönetim ve Performans Takip Veritabanı ER Diyagramı
---
erDiagram
    ULKE {
        int ulkeId PK
        varchar ulkeAd
    }

    SEHIR {
        int sehirId PK
        varchar sehirAd
        int ulkeKodu FK
    }

    GOREV {
        int gorevId PK
        varchar gorevAd
    }

    SPOR_DALI {
        int sporDaliId PK
        varchar sporDaliAd
    }

    BRANS {
        int bransId PK
        varchar bransAd
        int sporDaliId FK
    }

    KAN_GURUBU {
        int kanGrubuID PK
        varchar kanGurubuAd
    }

    PERSONEL {
        int personelID PK
        char TC UK
        varchar ad
        varchar soyad
        smallint cinsiyet
        date dogumT
        int yas "computed"
        char telefonNo UK
        varchar eposta UK
        int ulkeKodu FK
        int sehirKodu FK
        int gorevId FK
        int kanGurubuID FK
        int bransId FK
    }

    SPORCU_PUAN {
        int puanId PK
        int personelId FK
        int mevcutPuan
    }

    YIL {
        int yilId PK
        int yil UK
    }

    AY {
        int ayId PK
        varchar ayAdi
        int yilId FK
    }

    TURNUVA {
        int turnuvaId PK
        varchar turnuvaAd
        date baslangicTarihi
        date bitisTarihi
        int ayId FK
    }

    SALON {
        int salonId PK
        varchar salonAd
        int turnuvaId FK
        int ulkeKodu FK
        int sehirKodu FK
    }

    MUSABAKA {
        int musabakaId PK
        int turnuvaId FK
        int salonId FK
        varchar musabakaAd
        datetime baslangicTarihi
        datetime bitisTarihi
        int sporDaliId FK
    }

    PERSONEL_MUSABAKA {
        int personelId PK
        int musabakaId PK
        int bitirmeSirasi
    }

    MADALYA_TURU {
        int madalyaTuruId PK
        varchar madalyaAd UK
    }

    MADALYA {
        int madalyaId PK
        int personelId FK
        int musabakaId FK
        int bransId FK
        int madalyaTuruId FK
    }

    ANTRENMAN_YERI {
        int antrenmanYeriId PK
        varchar antrenmanYeriAd
        int ulkeKodu FK
        int sehirKodu FK
    }

    ANTRENMAN {
        int antrenmanId PK
        datetime baslangicTarihSaat
        datetime bitisTarihSaat
        int antrenmanSuresi "computed"
        int sporcuId FK
        int egitmenId FK
        int ayId FK
        int antrenmanYeriId FK
    }

    OLCUM {
        int olcumId PK
        int personelId FK
        int ayId FK
        decimal kilo
        decimal boy
    }

    ULKE ||--o{ SEHIR : "icerir"
    ULKE ||--o{ PERSONEL : "uyruk"
    SEHIR ||--o{ PERSONEL : "yasadigi_sehir"
    GOREV ||--o{ PERSONEL : "gorev"
    KAN_GURUBU ||--o{ PERSONEL : "kan_grubu"
    SPOR_DALI ||--o{ BRANS : "icerir"
    BRANS ||--o{ PERSONEL : "brans"
    PERSONEL ||--o| SPORCU_PUAN : "puan"

    YIL ||--o{ AY : "icerir"
    AY ||--o{ TURNUVA : "donem"
    TURNUVA ||--o{ SALON : "salon"
    ULKE ||--o{ SALON : "ulke"
    SEHIR ||--o{ SALON : "sehir"
    TURNUVA ||--o{ MUSABAKA : "icerir"
    SALON ||--o{ MUSABAKA : "ev_sahipligi"
    SPOR_DALI ||--o{ MUSABAKA : "spor_dali"

    PERSONEL ||--o{ PERSONEL_MUSABAKA : "katilir"
    MUSABAKA ||--o{ PERSONEL_MUSABAKA : "katilim"

    PERSONEL ||--o{ MADALYA : "kazanir"
    MUSABAKA ||--o{ MADALYA : "verilir"
    BRANS ||--o{ MADALYA : "brans"
    MADALYA_TURU ||--o{ MADALYA : "tur"

    ULKE ||--o{ ANTRENMAN_YERI : "ulke"
    SEHIR ||--o{ ANTRENMAN_YERI : "sehir"
    PERSONEL ||--o{ ANTRENMAN : "sporcu"
    PERSONEL ||--o{ ANTRENMAN : "egitmen"
    AY ||--o{ ANTRENMAN : "donem"
    ANTRENMAN_YERI ||--o{ ANTRENMAN : "yer"

    PERSONEL ||--o{ OLCUM : "olculur"
    AY ||--o{ OLCUM : "donem"
